syntax = "proto3";

option go_package = "github.com/n0067h/gbsw-gitrank/internal/protobuf/rank;rank";

message RankRequest {
  string organization = 1;
}

message RankReply {
  repeated User users = 1;
}

message User {
  string login = 1;
  uint32 totalContributions = 2;
}

service Rank {
  rpc GetRankings(RankRequest) returns (RankReply);
}
